k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-hello-world-service
  namespace: demo
  labels:
    app: python-hello-world
spec:
  selector:
    app: python-hello-world
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
